<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:background="@drawable/listview_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_margin="4dp">
        <TextView
                android:id="@+id/title"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textColor="@color/almost_black"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"/>
        <TextView
                android:id="@+id/noteContent"
                android:text="@string/content"
                android:fontFamily="droid"
                android:textColor="@color/grey_darken_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="viewEnd"
                android:text="@string/date"
                android:id="@+id/date"
                android:height="20dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>