<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/info_top"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/textView"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintCircleRadius="50dp"
            android:id="@+id/imageView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_sett_content_desc"/>
    <FrameLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/fragment_main"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@id/inf_b" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/inf_b"/>

    <TextView android:layout_width="wrap_content" android:layout_height="15dp"
              android:text="@string/info_bottom"
              android:textAlignment="center"
              android:id="@+id/inf_b"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:layout_marginBottom="4dp"
              android:fontFamily="sans-serif-smallcaps"/>
</androidx.constraintlayout.widget.ConstraintLayout>